# simple-deb

./: CMakeLists.txt  README.md
include/: myadd.h
src/: main.cc  myadd.cc
